# evollab

./: .gitignore  readme.md  requirements.in  requirements.txt
evollab/: cli.py  commands.py  models.py  pyproject.toml  readme.md  tasks.py
evollab/prompts/: __init__.py  analyze.py  augment.py  classify.py  derive.py  evolve.py  introspect.py  optimize.py
