[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evollab"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = ["halo", "click", "openai", "python-dotenv"]

[tool.hatch.build.targets.sdist]
include = ["."]

[tool.hatch.build.targets.wheel]
packages = ["evollab"]
